--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,171 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 * {
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  background-image: url("../images/bg-intro-mobile.png");
+  background-color: #ff7979;
+}
+
+main {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 36px;
+  text-align: center;
+  letter-spacing: -0.291667px;
+  color: #ffffff;
+}
+
+p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  color: #ffffff;
+}
+
+span {
+  font-weight: 600;
+}
+
+form {
+  background-color: #ffffff;
+  box-shadow: 0px 8px 0px rgba(0, 0, 0, 0.14688);
+  border-radius: 10px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input {
+  border: none;
+  font-family: "Poppins", sans-serif;
+  margin-left: 19px;
+}
+
+input::placeholder {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: 0.25px;
+  color: #3d3b48;
+  mix-blend-mode: normal;
+  opacity: 0.75;
+}
+
+button {
+  width: 279px;
+  height: 56px;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #38cc8b;
+  box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.0908818);
+  border-radius: 5px;
+  border: none;
+  margin-top: 19px;
+}
+
+a {
+  color: #ff7979;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+img {
+  width: 24px;
+  height: 24px;
+  margin-right: 19px;
+}
+
+article:first-of-type {
+  padding: 64px 5px 0 5px;
+}
+
+.trialinfo {
+  padding: 18px 67px;
+  background-color: #5e54a4;
+  box-shadow: 0px 8px 0px rgba(0, 0, 0, 0.14688);
+  border-radius: 10px;
+}
+
+.inputcontainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 279px;
+  height: 56px;
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: 0.25px;
+  color: #3d3b48;
+  background-color: #ffffff;
+  border: 1px solid #dedede;
+  border-radius: 5px;
+  margin-top: 19px;
+}
+
+.errorborder {
+  border: 2px solid #ff7979;
+}
+
+.falseinput {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: 0.25px;
+  color: #ff7979;
+}
+
+.errormessage {
+  font-style: italic;
+  font-weight: 500;
+  font-size: 11px;
+  line-height: 16px;
+  align-self: flex-end;
+  color: #ff7979;
+  margin-top: 6px;
+  margin-right: 3px;
+}
+
+.tandcs {
+  font-weight: 500;
+  font-size: 11px;
+  line-height: 21px;
+  text-align: center;
+  color: #bab7d4;
+  margin: 8px 16px 0 16px;
+}
+
+.errormessage,
+.erroricon {
+  display: none;
 }
