--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,11 @@ button:hover {
 }
 
 @media (min-width: 1300px) {
+  body {
+    background-image: url("../images/bg-intro-desktop.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   main {
     flex-direction: row;
     max-width: 100%;
@@ -205,6 +210,7 @@ button:hover {
   article:nth-of-type(2) {
     width: 540px;
     height: 558px;
+    justify-content: center;
   }
 
   h1 {
@@ -216,14 +222,21 @@ button:hover {
 
   form {
     width: 540px;
-    height: 474px;
+    padding:40px;
+  }
+
+  input {
+    width:460px;
+    height:40px;
   }
 
   button, .inputcontainer {
-    
         width: 460px;
-        height: 56px;
-      
+        height: 56px;   
+  }
+
+  .inputcontainer {
+    margin-top:20px;
   }
 
   .descriptiontext {
